feat: tambah modul peremajaan kolektif dan endpoint terkait
